syntax = "proto3";

option go_package= "file_server/api";


package file;

service FileService {
    rpc FileDownLoad (FileInfo) returns (stream BytesContent);
}

message FileInfo {
    string fileName = 1;
    string fileExtension = 2;
}

message BytesContent {
    int64 fileSize = 1;
    bytes buffer = 2;
    int32 readedByte = 3;
    FileInfo info = 4;
}

